--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
@@ -38,6 +39,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
