--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "jsx": "react",
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["src/types"],
   },
   "include": [
     "./src/**/*"
